--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         </div>
     </nav>
 
-    <div class="container mx-auto px-4 sm:px-6 pt-24 pb-12 xl:max-w-screen-xl">
+    <div class="container mx-auto px-4 sm:px-6 pt-24 pb-12 xl:max-w-screen-lg">
 
         <section id="overview" class="py-12 md:py-16">
             <div class="text-center mb-12">
